--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
                 <img src="https://st2.depositphotos.com/30085714/43012/v/450/depositphotos_430124534-stock-illustration-donut-logo-vector-illusration-design.jpg" alt="Donuts Logo" style="height: 40px;">
             </a>
             <ul>
+                        <li><a href="#inicio">Inicio</a>
+                        <li><a href="misionvision.html" target="_blank" rel="noopener noreferrer" class="btn btn-lg">Misión y Visión</a></li>
+                        <li><a href="organigrama.html" target="_blank" rel="noopener noreferrer" class="btn btn-lg">Orgganigrama</a></li>
+<li><a href="presupuestos.html" target="_blank" rel="noopener noreferrer" class="btn btn-lg">Presupuestos</a></li>
+
+                    </ul>
+            <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#menu">Menú</a></li>
                 <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
